# NeneEngine

./: .gitignore  Cargo.toml  NeneEngine.sln  README.md
.github/workflows/: docs.yml
Include/NeneEngine/: engine.hpp  util.hpp
Include/NeneEngineTest/: NeneEngineTest.hpp  Resource.h
NeneEngine/: NeneEngine.cpp  NeneEngine.rc  NeneEngine.vcxproj  NeneEngine.vcxproj.filters  Resource.h
Src/NeneEngine/: engine.cpp  util.cpp
Src/NeneEngineTest/: NeneEngineTest.cpp  NeneEngineTest.rc  NeneEngineTest.vcxproj  NeneEngineTest.vcxproj.filters
crates/nene-build/: Cargo.toml
crates/nene-derive/: Cargo.toml
examples/: animation.rs  audio.rs  culling.rs  debug_draw.rs  ecs.rs  egui_demo.rs  event.rs  fixed_update.rs  gltf.rs  input.rs  instancing.rs  locale.rs  mesh.rs  mesh_textured.rs  multiplayer_client.rs  multiplayer_server.rs  net_client.rs  net_server.rs  particle.rs  pathfinding.rs  physics.rs  physics2d.rs  physics3d.rs  picking.rs  postprocess.rs  profile.rs  save.rs  scene.rs  settings.rs  spatial_audio.rs  sprite.rs  state_machine.rs  text.rs  text_texture.rs  texture.rs  tilemap.rs  triangle.rs  tween.rs  ui.rs  window.rs
saves/: settings.json
src/: app.rs  lib.rs  pak.rs  picking.rs
src/ai/: mod.rs  pathfinding.rs
src/animation/: animator.rs  mod.rs  skinned_material.rs  state_machine.rs
src/asset/: mod.rs
src/audio/: device.rs  mod.rs  sound.rs  spatial.rs
src/camera/: mod.rs
tests/: animation.rs  asset.rs  audio.rs  camera.rs  culling.rs  debug.rs  ecs.rs  event.rs  input.rs  light.rs  locale.rs  mesh.rs  net.rs  particle.rs  pathfinding.rs  physics2d.rs  physics3d.rs  postprocess.rs  profile.rs  renderer.rs  save.rs  scene.rs  settings.rs  shadow.rs  spatial_audio.rs  text.rs  texture.rs  tilemap.rs  time.rs  tween.rs  ui.rs  window.rs
(+78 files in other folders)
