[package]
name = "nene"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/nene-derive"]
resolver = "2"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
cosmic-text = "0.18.2"
cpal = "0.17.3"
encase = "0.12.0"
gilrs = "0.11.1"
glam = { version = "0.30", features = ["bytemuck", "encase"] }
gltf = "1.4.1"
image = "0.25.10"
nene-derive = { path = "crates/nene-derive" }
pollster = "0.3"
rapier2d = "0.32.0"
rapier3d = "0.32.0"
symphonia = "0.5.5"
tobj = "4.0.3"
wgpu = "29.0.0"
winit = "0.30.13"
