[package]
name = "nene"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "crates/nene-derive", "crates/nene-build"]
resolver = "2"

[dependencies]
bytemuck = { version = "1.25.0", features = ["derive"] }
cosmic-text = "0.18.2"
cpal = "0.17.3"
encase = "0.12.0"
gilrs = "0.11.1"
glam = { version = "0.30", features = ["bytemuck", "encase", "scalar-math"] }
gltf = "1.4.1"
image = "0.25.10"
nene-derive = { path = "crates/nene-derive" }
notify = "8.2.0"
pollster = "0.3"
rapier2d = "0.32.0"
rapier3d = "0.32.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
symphonia = "0.5.5"
chacha20 = "0.9"
tobj = "4.0.3"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "net", "sync", "time", "macros"] }
wgpu = "29.0.0"
winit = "0.30.13"
